# dh-marl

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: bbt.yaml  ccd.yaml  default.yaml  dsm.yaml  msdd.yaml  smoke.yaml
dh_marl/: __init__.py
dh_marl/baselines/: __init__.py  coma_gnn.py  ind_sa.py  mappo.py  sa_la.py
dh_marl/comm/: __init__.py  diffusion_channel.py
dh_marl/eval/: __init__.py  evaluator.py  metrics.py  role_analysis.py
dh_marl/models/: __init__.py  critic.py  layers.py  message_encoder.py  policy.py
dh_marl/train/: __init__.py  fcb.py  normalizer.py  ppo.py  rollout.py  trainer.py
dh_marl/utils/: __init__.py  config.py  logging.py  seeding.py
docs/: code_availability.tex
scripts/: ablation.py  evaluate.py  train.py
scripts/slurm/: ablation.slurm  train_dhmarl.slurm
tests/: test_channel.py  test_critic.py  test_env.py  test_fcb.py  test_hemodynamics.py  test_policy.py
