[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dh-marl"
version = "0.1.0"
description = "Decentralized Hemodynamic-Aware Multi-Agent Reinforcement Learning for Micro-Robot Swarms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Truong Nhut Huynh", email = "thuynh2023@my.fit.edu" },
    { name = "Kim-Doang Nguyen", email = "kdnguyen@fit.edu" },
]
keywords = [
    "multi-agent reinforcement learning",
    "micro-robots",
    "vascular navigation",
    "graph neural networks",
    "hemodynamics",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.5",
    "numpy>=1.24",
    "scipy>=1.11",
    "gymnasium>=0.29",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "tensorboard>=2.15",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "matplotlib>=3.8",
]

[project.scripts]
dhmarl-train = "dh_marl.train.trainer:main"
dhmarl-eval = "dh_marl.eval.evaluator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dh_marl*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
